--- a/tasks.json
+++ b/tasks.json
@@ -2,7 +2,7 @@
     "
         {
             "type": "cppbuild",
-            "label": "C/C++: gcc.exe build active file",
+            "lild active file",
             "command": "C:\\Program Files (x86)\\mingw-w64\\i686-8.1.0-posix-dwarf-rt_v6-rev0\\mingw32\\bin\\gcc.exe",
             "args": [
                 "-g",
